Fixed notes section alignment and design

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -147,3 +147,64 @@ header #banner {
     align-items:center ;        
 
 }
+
+.notes {
+    padding: 80px 0;    
+    width: 85%;         
+    max-width: 1360px;
+    margin: 0 auto;    
+}
+
+.notes-heading {
+    text-align: center;      
+    max-width: 700px;         
+    margin: 0 auto 50px auto;
+}
+
+.notes-box {
+    display: flex;            
+    gap: 24px;              
+    justify-content: space-between;
+}
+
+.icon-box {
+    width: 60px;
+    height: 60px;
+    background-color: #F95555; 
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto 20px auto; 
+}
+
+.notes-card img {
+    width: 24px;  
+    height: auto;
+}
+
+
+.notes-card {
+    text-align: center;
+    background-color: #ffffff;
+    padding: 24px;
+    border-radius: 12px;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
+    flex: 1;
+}
+
+
+
+.notes-card h3 {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    color: #111;
+}
+
+
+.notes-card p {
+    font-size: 16px;
+    color: #666;
+    line-height: 1.5; 
+}
